uniformity for sub headings and typography edits for candidate pages

--- a/child_pages/cc-elections/Candidates/donato.html
+++ b/child_pages/cc-elections/Candidates/donato.html
@@ -56,7 +56,7 @@
             <a href="https://www.facebook.com/michael.donato.1460/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
             <a href="https://instagram.com/mike17donato?igshid=MmU2YjMzNjRlOQ==" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
         </div>
-        <h3 class="sub-heading">individual agenda</h3>
+        <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 Mr. Donato wants to lead the Sheriff’s Department back to a strong law 
                 enforcement agency, advance partnerships with local and state police departments, 
@@ -68,13 +68,13 @@
                 enforcement agency, advance partnerships with local and state police departments, 
                 and increase the visibility of the Sheriff’s Department. 
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform the Vote could find no available public information explaining the details of this agenda.
                 Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 Michael’s extensive law enforcement career spans from 1994 through 2023.  He began working in the Cumberland County Sheriff’s Department working in the County Jail, the County Courthouse, and the County Narcotics Task Force.  He worked for the Bridgeton Police Department form 1998 through 2005 in the Uniform Patrol Division, the Criminal Investigation Division, and then was assigned to the Narcotics Task Force.
 
