--- a/child_pages/cc-elections/Candidates/luisi.html
+++ b/child_pages/cc-elections/Candidates/luisi.html
@@ -66,12 +66,12 @@
                 a loved one.  He knows that the Surrogate’s office also offers other professional services for adoptions and understands 
                 that too many residents need guidance navigating through governmental regulations.
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 In addition to being the owner and manager of the Demarco-Luisi Funeral Home in Vineland for 35 years, 
                 Skip has been a licensed funeral director for 50 years.  He was involved in the West Jersey Funeral 
