--- a/child_pages/cc-elections/Candidates/marchand.html
+++ b/child_pages/cc-elections/Candidates/marchand.html
@@ -50,12 +50,12 @@
         <img class="cover" src="../../../assets/candidates/marchand.webp" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
-        <h4 class="sub-heading">Website</h4>
+        <h4 class="sub-heading">website</h4>
         <div class="website">
             <a href="https://www.ccrrogop.org/cumberlandcountycommissioners" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland County Republicans Site</a>
             <a href="https://www.facebook.com/art.marchand.3" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
         </div>
-        <h3 class="sub-heading">individual agenda</h3>
+        <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 Unknown
             </div>
@@ -65,13 +65,13 @@
                 every benchmark of health, literacy, and once again become a healthy and safe 
                 place to raise a family.
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform the Vote could find no available public information explaining the details of this agenda.
                 Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 After college, he attended Rutgers University School of Law where he graduated with a J.D. in 2003.
                 After law school, Mr. Marchand completed a one-year clerkship with a New Jersey Appellate Court Judge.
