--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -56,7 +56,7 @@
             <a href="https://www.facebook.com/AssemblymanMcClellan/" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
             <a href="https://instagram.com/mcclellanantwan?igshid=MmU2YjMzNjRlOQ==" target="_blank" rel="noopener noreferrer" class="website-link">Instagram</a>
         </div>
-        <h4 class="sub-heading">INDIVIDUAL agenda</h4>
+        <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 Supports parents rights to make decisions about their children's health and wellness.<a href="https://twitter.com/TestaForNJ/status/1709190819075309773" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X</a>
             </div>
@@ -74,13 +74,13 @@
                
                 Stand with Law Enforcement
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform the Vote could find no available public information explaining the details of this agenda.
                 Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             NJ District 1 Assemblyman - Sworn in on January 14th 2020 to present
 
             Serving on the following Committees: Appropriations/Homeland Security and State Preparedness/Tourism, Gaming and the Arts
