--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -70,7 +70,7 @@
                 Protect the environment.
                 Expand broadband internet access.
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform the Vote spoke with Perella at Deerfield Day. Seems to be very focused on public water and sewage issues in county.  
                 The cost of getting sewage and water up to code for residences and businesses is so high currently that it is preventing new business investment 
@@ -80,7 +80,7 @@
                 While acknowledging that the Middle Mile will not connect the end user, she believes it is an essential first step in the process and proper oversight will be conducted.
                 Also mentioned their commitment to bringing awareness to mental illness, depression, and suicide.  Her implementation plan is to get more social workers and counselors into county schools.
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                Works as a dentist. When she isn’t treating patients Joeigh can be found spending time on 
                the many community service and volunteer organizations she is involved with. Since 2019 she 
