--- a/child_pages/cc-elections/Candidates/sauro.html
+++ b/child_pages/cc-elections/Candidates/sauro.html
@@ -67,14 +67,14 @@
                 belief that Cumberland County is on the cusp of greatness once again are the reasons 
                 he has returned as a candidate. 
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform the Vote could find no available public information explaining the details of this agenda.
                 Inform The Vote was able to speak with Sauro at Deerfield Day, Sun August 6th.  Sauro wants to bring 
                 more business into Cumberland County.  Wants to leverage college students for research into matter. 
                 Also wants to lower taxes.
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 Sauro has service on the County Commissioner Board (County Freeholder Board) in the 
                 early 2000s. He served as Director for one year. As a business owner of a Plumbing 
