--- a/child_pages/cc-elections/Candidates/simonsen.html
+++ b/child_pages/cc-elections/Candidates/simonsen.html
@@ -77,13 +77,13 @@
                
                 Stand with Law Enforcement
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform the Vote could find no available public information explaining the details of this agenda.
                 Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 NJ District 1 Assemblyman - Sworn in on January 14th 2020
 
