--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -64,12 +64,12 @@
                 Provide county recreational advancements, building a county indoor sports facility and swim center and improving county recreation areas.
                 Support state of the art correctional facility, by improving conditions and programs and drive long standing issues with facility to closure. Also wishes to reduce cost and tax burden of facility.
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes.
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 Since 2007, La Rae has worked in education with the Commercial Township Board of Education.  She is currently a Social Service Coordinator 
                 for the United Methodist Communities in Ocean City, New Jersey. With her vast background in Economic Development, Community Education, and 
