--- a/child_pages/cc-elections/Candidates/taylor.html
+++ b/child_pages/cc-elections/Candidates/taylor.html
@@ -66,11 +66,11 @@
                 with so much nature to enjoy.  Establishing a county or state park 
                 along the Cohansey River is one of her goals as Commissioner. 
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform The Vote was able to speak with Taylor at a recent CCRRO Breakfast Meeting.  Sandy discusses that they have the following objectives.  Her daughter  is now a drug rehab nurse. So Sandy has a concern for helping the drug problem in the county (opioids, addiction, etc). She also is concerned about homelessness in the area. She mentioned the homeless people near target, high street and broad Street in millville, downtown Bridgeton, etc. She talked about Money Island Road, which is an important road in the Bayshore area. This road has been affected over the years by climate change and it's current condition impedes the oyster industry, a multimillion dollar industry, from functioning properly. She wants to fix that. She also said that while she wants to help develop the eco-tourism industry in the county, she also wants to make sure that it is done in a way that helps protect the environment.
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 Sandy’s career in banking spans from 1980 to 2021. Her community involvement 
                 has extended beyond being a member of the Vineland and Millville Chamber of 
