--- a/child_pages/cc-elections/Candidates/testa.html
+++ b/child_pages/cc-elections/Candidates/testa.html
@@ -115,7 +115,7 @@
             <div class="agenda-per-party-site">
                 <p>Mike continues to lead the fight against Phil Murphy's and his Administration's mismanagement of NJ that we need to rebuild the local economy, save the shore tourism, preserve ocean sea life and commercial fishing, reduce the red tape for business growth and expansion, stop the decay of the core curriculum for our children, improve the special needs programs, bring back job opportunities, and return the spirit, moral, and enthusiasm back to the people of South Jersey.</p>
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 <ol>
                     <li>Helped 4,000 residents receive unemployment.</li>
@@ -127,7 +127,7 @@
                     <li>Supported a legislative bill that would set up a voter fraud task force, suspend automatic voter registration, move people with undeliverable addresses to inactive voter rolls, and require the secretary of state’s website to have a place to report vote-by-mail fraud</li>
                 </ol>
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 Grew up in Cumberland County. His grandfather was the first mayor of Vineland. His father built
                 the family law firm. Under-graduate degree of Villanova law. Masters at Temple University Beasley
