--- a/child_pages/cc-elections/Candidates/acevedo.html
+++ b/child_pages/cc-elections/Candidates/acevedo.html
@@ -55,7 +55,7 @@
             <a href="https://acevedoforsurrogate.com/" target="_blank" rel="noopener noreferrer" class="website-link">Personal Campaign Site</a>
             <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
         </div>
-        <h3 class="sub-heading">agenda</h3>
+        <h4 class="sub-heading">agenda</h4>
             <div class="agenda-thesis">
                 Make the Surrogate's Office more efficient and effective by making online forms inter-active.
                 Cut red tape and simplify procedures for those who seek assistance from the Surrogate's Office.
@@ -65,13 +65,13 @@
             <div class="agenda-per-party-site">
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform the Vote spoke with Acevedo at Deerfield Day. He describes himself as an 'anti-legacy candidate' and stated a funeral director is not 
                 qualified for the position, regarding his opponent Luisi.  Would like to update form policies for county, mainly making forms available to be filled 
                 out online.  Currently forms must be printed out and filled out in writing.  Mentioned his website: <a href="https://acevedoforsurrogate.com">Acevedo for Surrogate</a>.
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 Nick helped create of one of the first residential GED programs in the state of New Jersey. 
                 Upon graduation, Nick continued to serve as a member of Stockton’s Community Advisory Board. For his contributions and dedication, he would later receive an Award of Appreciation for his service.
