--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -63,12 +63,12 @@
             <div class="agenda-per-party-site">
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform The Vote was able to speak with Austino at Deerfield Day. Stated he helped develop policies over the years but did not go into detail on such policies.
                 Was instrumental in Vineland Police Department becoming first accredited department in the state of NJ. Wants to develop community outreach project for youth and seniors.
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 Sheriff Robert A. Austino brings over 30 years of law enforcement experience to the Sheriff’s Office.  He was hired by the Vineland Police Department in April 1973.  He worked his way up the ranks of the Vineland Police Department to the rank of lieutenant.  Sheriff Austino retired from the Vineland Police Department in July of 2003.  He was elected Sheriff of Cumberland County and took office January 1, 2009
                 Sheriff Austino attended Bridgeton High School, Cumberland County College and Glassboro State College.
