--- a/child_pages/cc-elections/Candidates/bonner.html
+++ b/child_pages/cc-elections/Candidates/bonner.html
@@ -71,12 +71,12 @@
             <div class="agenda-per-party-site">
                 <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/" target="_blank" rel="noopener noreferrer" class="website-link">Cumberland Democrats Site</a>
             </div>
-            <h4 class="sub-heading">POLICY POSITIONS</h4>
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes.
             </div>
-            <h4 class="sub-heading">EXPERIENCE</h4>
+            <h4 class="sub-heading">experience</h4>
             <div class="experience">
                 Has 15 years experience as a police officer. Now he serves as District Manager for KD National Force Security managing security for 
                 Cumberland Regional High School, Hopewell Crest School, in Hopewell, and Cumberland Christian School, in Vineland.
