further typography edits for candidate pages

--- a/child_pages/cc-elections/Candidates/acevedo.html
+++ b/child_pages/cc-elections/Candidates/acevedo.html
@@ -73,17 +73,17 @@
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
-                Nick helped create of one of the first residential GED programs in the state of New Jersey. 
+                <p>Nick helped create of one of the first residential GED programs in the state of New Jersey. 
                 Upon graduation, Nick continued to serve as a member of Stockton’s Community Advisory Board. For his contributions and dedication, he would later receive an Award of Appreciation for his service.
 
                 After Stockton, he joined the Office of Energy Conservation and Weatherization with the Department of Community Affairs where he contributed to the creation of the “Home Inspection Protocol”. Allowing the program 
-                to provide effective weatherization for thousands of homes to reduce their energy usage. The lives of many seniors and families in the state, were improved by cost savings and comfort.
-
-                He is the founder and principal of Acevedo and Associates, Attorneys at Law. His many years of legal experience and public service has afforded him the opportunity to continue to serve his community by providing many 
+                to provide effective weatherization for thousands of homes to reduce their energy usage. The lives of many seniors and families in the state, were improved by cost savings and comfort.</p>
+                <p>He is the founder and principal of Acevedo and Associates, Attorneys at Law. His many years of legal experience and public service has afforded him the opportunity to continue to serve his community by providing many 
                 legal services to individuals, business, churches and community organizations.
 
-                During his law career, Nick was asked to take a sabbatical from his practice to join the New Jersey Department of Commerce where he would become Vice President of Domestic and Foreign Business Attraction and Retention. 
-                While in this role he would bring many economic and business investment opportunities to South Jersey and Cumberland County, which he continues to perform today as an attorney.
+                During his law career, Nick was asked to take a sabbatical from his practice to join the New Jersey Department of Commerce where he would become Vice President of Domestic and Foreign Business Attraction and Retention.</p>
+                <p>While in this role he would bring many economic and business investment opportunities to South Jersey and Cumberland County, which he continues to perform today as an attorney.</p>
+
             </div>
     </div>
  </div>   
