--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -71,14 +71,14 @@
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
-                Since 2007, La Rae has worked in education with the Commercial Township Board of Education.  She is currently a Social Service Coordinator 
+                <p>Since 2007, La Rae has worked in education with the Commercial Township Board of Education.  She is currently a Social Service Coordinator 
                 for the United Methodist Communities in Ocean City, New Jersey. With her vast background in Economic Development, Community Education, and 
-                Business, La Rae successfully completed a Certificate of Achievement from Atlantic Cape Community College’s Self-Employment Assistance Program in January 2006. 
-
-                She has been recognized by the First District New Jersey Congress of the United States House of Representatives and Cumberland County Democratic Women receiving 
+                Business, La Rae successfully completed a Certificate of Achievement from Atlantic Cape Community College’s Self-Employment Assistance Program in January 2006.</p>
+                <p>She has been recognized by the First District New Jersey Congress of the United States House of Representatives and Cumberland County Democratic Women receiving 
                 the Outstanding Women of Cumberland County Certificate of Commendation presented by Cumberland County Commissioners.  She is Chair of the Land Use Board in Commercial 
                 Township, Chair of the Democratic Party for Commercial Township, and serves as an elected official of the Commercial Township Board of Education. Her volunteer work in 
-                recreational leagues, faith-based activities, and community service speaks volumes to her compassion and integrity. She serves as a champion to the voices of people in this great community that she loves.
+                recreational leagues, faith-based activities, and community service speaks volumes to her compassion and integrity. She serves as a champion to the voices of people in this great community that she loves.</p>
+                
             </div>
     </div>
  </div>   
