--- a/child_pages/contact.html
+++ b/child_pages/contact.html
@@ -42,6 +42,7 @@
         <p>
             For any and all inquiries, reach out to Inform The Vote by <a href="mailto:informthevotecc@gmail.com">email</a>.
         </p>
+        <p>This site was built by <a href="mailto:pierrelampre@gmail.com">Lampelights Web Craft</a>.</p>
         
     </div>
 
