--- a/child_pages/cc-elections/Candidates/donato.html
+++ b/child_pages/cc-elections/Candidates/donato.html
@@ -76,35 +76,13 @@
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
-                Michael’s extensive law enforcement career spans from 1994 through 2023.  He began working in the Cumberland County Sheriff’s Department working in the County Jail, the County Courthouse, and the County Narcotics Task Force.  He worked for the Bridgeton Police Department form 1998 through 2005 in the Uniform Patrol Division, the Criminal Investigation Division, and then was assigned to the Narcotics Task Force.
-
-​
-
-Michael then worked in the Cumberland County Prosecutor’s Office for 15 years.  He spent many years of his career assigned to the Cumberland County Narcotics Task Force.  He successfully authored search warrants leading to seizure of illegal narcotics, weapons and US currency and resulting arrests and/or convictions. Michael was assigned to the Trial Unit which was responsible for trial preparations for court proceedings.  He also worked in the Major Crimes Unit for many years where he was a Detective and was promoted to Detective Sergeant.  After supervising the Major Crimes Unit for approximately five years, he was transferred to the Cumberland County Narcotics Task Force as the supervisor.
-
-​
-
-He was promoted to Detective Lieutenant and supervised the Legal Bureau before retiring in Marach 2020.  Throughout Michael’s career, he spent many years working in and supervising the Cumberland County Narcotics Task Force, Major Crimes Unit and worked with various municipal, state, and federal law enforcement agencies.
-
-​
-
-From 2020 to 2023, Michael worked for the City of Millville Police Department in the Evidence Unit as a Police Investigator.  He remains involved in Cumberland County as the Cumberland County Department of Consumer Affairs as the Director of the Cumberland County Consumer Affairs.
-
-​
-
-Michael Donato has vast experience as a Fire Fighter.  He continues to be a part-time fire inspector and investigator for the City of Bridgeton Fire Department and has been a member of the Cedarville Volunteer Fire Department since 1991.
-
-Prior to volunteering for the Cedarville Volunteer Fire Department, he held positions as Lieutenant, Captain, and Chief for several years in the Lawrence Township Emergency Medical Services.  Michael was the president of the Cumberland County Fire Chiefs and E.M.S. Captains Association from 2018 through 2022.  Currently he is the Vice President.
-
-​
-
-Other community volunteerism includes being on the Bridgeton Baseball Invitation Committee for 10 years and is on the Supervisory Board for the Bridgeton Onized Federal Credit Union for the past year.
-
-​
-
-Michael Donato has received numerous awards and citations for his exemplary service to the Cedarville Fire Department, the Bridgeton Police Department, the United States Drug Enforcement Administration, and the Albert J Mallen 2004 Narcotics Officer of the year.
-
-​
+                <p>Michael’s extensive law enforcement career spans from 1994 through 2023.  He began working in the Cumberland County Sheriff’s Department working in the County Jail, the County Courthouse, and the County Narcotics Task Force.  He worked for the Bridgeton Police Department form 1998 through 2005 in the Uniform Patrol Division, the Criminal Investigation Division, and then was assigned to the Narcotics Task Force.</p>
+                <p>Michael then worked in the Cumberland County Prosecutor’s Office for 15 years.  He spent many years of his career assigned to the Cumberland County Narcotics Task Force.  He successfully authored search warrants leading to seizure of illegal narcotics, weapons and US currency and resulting arrests and/or convictions. Michael was assigned to the Trial Unit which was responsible for trial preparations for court proceedings.  He also worked in the Major Crimes Unit for many years where he was a Detective and was promoted to Detective Sergeant.  After supervising the Major Crimes Unit for approximately five years, he was transferred to the Cumberland County Narcotics Task Force as the supervisor.</p>
+                <p>He was promoted to Detective Lieutenant and supervised the Legal Bureau before retiring in Marach 2020.  Throughout Michael’s career, he spent many years working in and supervising the Cumberland County Narcotics Task Force, Major Crimes Unit and worked with various municipal, state, and federal law enforcement agencies.</p>
+                <p>From 2020 to 2023, Michael worked for the City of Millville Police Department in the Evidence Unit as a Police Investigator.  He remains involved in Cumberland County as the Cumberland County Department of Consumer Affairs as the Director of the Cumberland County Consumer Affairs.</p>
+                <p>Michael Donato has vast experience as a Fire Fighter.  He continues to be a part-time fire inspector and investigator for the City of Bridgeton Fire Department and has been a member of the Cedarville Volunteer Fire Department since 1991.</p>
+                <p>Prior to volunteering for the Cedarville Volunteer Fire Department, he held positions as Lieutenant, Captain, and Chief for several years in the Lawrence Township Emergency Medical Services.  Michael was the president of the Cumberland County Fire Chiefs and E.M.S. Captains Association from 2018 through 2022.  Currently he is the Vice President.</p>
+                <p>Other community volunteerism includes being on the Bridgeton Baseball Invitation Committee for 10 years and is on the Supervisory Board for the Bridgeton Onized Federal Credit Union for the past year.  Michael Donato has received numerous awards and citations for his exemplary service to the Cedarville Fire Department, the Bridgeton Police Department, the United States Drug Enforcement Administration, and the Albert J Mallen 2004 Narcotics Officer of the year.</p>
             </div>
     </div>
  </div>   
