perellas facebook trans rights link

--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -72,6 +72,7 @@
                     <li>Develop more afforable housing and new home construction.</li>
                     <li>Protect the environment.</li>
                     <li>Expand broadband internet access.</li>
+                    <li>Supports trans rights. <a href="https://www.facebook.com/photo/?fbid=624737776357167&set=a.298964968934451" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>                 </li>
                 </ul>
             </div>
             <h4 class="sub-heading">policy positions</h4>
