simonsen against off shore wind from facebook

--- a/child_pages/cc-elections/Candidates/simonsen.html
+++ b/child_pages/cc-elections/Candidates/simonsen.html
@@ -64,6 +64,8 @@
                 Supports parents rights to make decisions about their children's health and wellness.<a href="https://twitter.com/TestaForNJ/status/1709190819075309773" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X</a>
                 <br>
                 Supports the troops. Gleaned from <a href="https://www.facebook.com/NJRFTF/posts/pfbid08yQkHTkFzkSd7p6agCWAnGZxGmbsPmoh4Tx7VsKTULodwcrX9NDhmXLqHRVow366l" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a> reposts.
+                <br>
+                Against off shore wind projects. Gleaned from <a href="https://www.facebook.com/photo/?fbid=815751097217385&set=a.269664005159433" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
