simonsens support for trauma care on facebook

--- a/child_pages/cc-elections/Candidates/simonsen.html
+++ b/child_pages/cc-elections/Candidates/simonsen.html
@@ -66,6 +66,8 @@
                 Supports the troops. Gleaned from <a href="https://www.facebook.com/NJRFTF/posts/pfbid08yQkHTkFzkSd7p6agCWAnGZxGmbsPmoh4Tx7VsKTULodwcrX9NDhmXLqHRVow366l" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a> reposts.
                 <br>
                 Against off shore wind projects. Gleaned from <a href="https://www.facebook.com/photo/?fbid=815751097217385&set=a.269664005159433" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
+                <br>
+                Supports trauma response care. Gleaned from <a href="https://www.facebook.com/photo/?fbid=812731064186055&set=a.269664008492766" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
