sheriff donatos in person statement regarding overall crime and offroad vehicles

--- a/child_pages/cc-elections/Candidates/donato.html
+++ b/child_pages/cc-elections/Candidates/donato.html
@@ -70,9 +70,7 @@
             </div>
             <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
-                Inform the Vote could find no available public information explaining the details of this agenda.
-                Inform The Vote has reached out to this candidate through numerous means and have
-                yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
+                Inform the vote was able to speak with Sheriff Donato at a Republican breakfast event in Mauricetown. His main focus seems to be to increase police presence in the county which should act as a deterrent for overall crime and dangerous off-road vehicle activity (ATVs, dirtbikes, etc.). He is also thinking of new ways to address crime throughout the county. 
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
