skip luisi page updates

--- a/child_pages/cc-elections/Candidates/luisi.html
+++ b/child_pages/cc-elections/Candidates/luisi.html
@@ -57,7 +57,8 @@
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
-                
+                Mr. Luisi plans to be a full time surrogate, which is in contrast to many public officials not treating their 
+                positions as a primary job. He plans to provide free will service. He wants to add additional offices in the county.
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
@@ -67,18 +68,24 @@
                 that too many residents need guidance navigating through governmental regulations.
             </div>
             <h4 class="sub-heading">policy positions</h4>
+                Mr. Luisi plans to be a full time surrogate, which is in contrast to many public officials not treating their 
+                positions as a primary job. He plans to provide free will service. He wants to add additional offices in the county.
             <div class="policy-positions">
                 Inform The Vote has reached out to this candidate through numerous means and have
                 yet to be in contact with them. Visit the  <a href="../../about.html">About page</a> for more information regarding our processes
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
+                ***Luisi volunteered at a Republican breakfast event in Mauricetown that his opponents public statements regarding 
+                'experience matters' is not such a big deal since it is very common for funeral directors to assume the role 
+                of surrogate.
+                <br>
                 In addition to being the owner and manager of the Demarco-Luisi Funeral Home in Vineland for 35 years, 
                 Skip has been a licensed funeral director for 50 years.  He was involved in the West Jersey Funeral 
                 Director Association, his local and civic memberships include being the Founder and Past President of 
                 the Italian American Benevolent Association, a member of the American Legion Post 0270, he is the past 
                 member of the Vineland Housing Authority and was a member on the Vineland Zoning Board. Lifelong resident of 
-                VIneland
+                Vineland
             </div>
     </div>
  </div>   
