--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -59,6 +59,9 @@
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
                 Supports parents rights to make decisions about their children's health and wellness.<a href="https://twitter.com/TestaForNJ/status/1709190819075309773" target="_blank" rel="noopener noreferrer" class="website-link"> Twitter/X</a>
+                <br>
+                Supports trauma response care. Gleaned from <a href="https://www.facebook.com/AssemblymanMcClellan/posts/pfbid02EGqa2AGGxrCXFjiAjeEdMFGttULyX43cc3Ng99kUpbeejLdzA2oFPV7Riph1pZj1l" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
+                <br>
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
