--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -70,6 +70,8 @@
                 <br>
                 Advocates for small business. Posted on <a href="https://www.insidernj.com/press-release/nfib-new-jersey-endorses-pro-small-business-candidates-for-legislature/?fbclid=IwAR02oK2CIDIhZ_NoriGG7MWb27RjrDxUU-esxh_pvb2JwP24M_jCCpJ0_mo" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
                 <br>
+                Supports New Jobs PAC. Posted on <a href="https://newjobspac.com/wordpress/?p=675&fbclid=IwAR3Fjz3lX_ac8uR7hRtT3EakBnXRAB6VEHUsbIeWEhVDxtWLs40HV6AlWlQ" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
+
             </div>
             <h4 class="sub-heading">party messaging</h4>
             <div class="agenda-per-party-site">
