--- a/child_pages/events.html
+++ b/child_pages/events.html
@@ -115,6 +115,15 @@
             </div>
             <div class="event-card">
                 <ul class="event-info">
+                    <li class="name"><strong>Republican LD-1 Re-election Reception</strong></li>
+                    <li class="description">A reception to support the re-election of the Republican incumbents for Senate and Assembly. Follow the links to RSVP. Donation required.</li>
+                    <li class="date-and-time">10/25/23 - 6pm</li>
+                    <li class="location">Congress Hall, 200 Congress Place, Cape May, NJ 08204</li>
+                    <li><a href="https://secure.anedot.com/contribute-testa-for-senate/ld1-reception-2023?fbclid=IwAR1FWskRgBPLCuKS8Ethqj0P0IekD-k7rrIo6R4nsBx66djGWm7naoixzdw">Meeting Info on County Calendar</a></li>
+                </ul>
+            </div>
+            <div class="event-card">
+                <ul class="event-info">
                     <li class="name"><strong>Scoops and Politics</strong></li>
                     <li class="description">An event posted by Mike Testa on Facebook. This MIGHT be a chance to meet incumbents Simonsen and Mclellan. Follow info at Facebook event link to RSVP, which is provided under the tickets section.</li>
                     <li class="date-and-time">11/02/23 6pm - 8pm</li>
