--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -73,6 +73,10 @@
                 Supports New Jobs PAC. Posted on <a href="https://newjobspac.com/wordpress/?p=675&fbclid=IwAR3Fjz3lX_ac8uR7hRtT3EakBnXRAB6VEHUsbIeWEhVDxtWLs40HV6AlWlQ" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
                 <br>
                 Supports combining business development with college education. Posted on <a href="https://www.facebook.com/AssemblymanMcClellan/posts/pfbid02F61wPiJv1xsFwRzu53WNeCoAQsdfweUjDjZrtMrSUp5EGmHSbUb4CJ1hNrPdGyNol" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
+                <br>
+                Helped ensure SNAP recipients were reimbursed for stolen benefits. Posted on <a href="https://www.facebook.com/AssemblymanMcClellan/posts/pfbid05PNGenpCVPN1bwbNZ8Gk1R3JAxurQWFqUxrNKzuurLBc8jLpFwn6t136pm2BmpQnl" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
+                <br>
+                Supports preserving historic landmarks such as lighthouses. Posted on <a href="https://www.facebook.com/AssemblymanMcClellan/posts/pfbid0zFfDf6WQKbSyYV1taaFmjT3xDCXffZAtSMfbo5YP65roRsgKNHfkehhNJEj8yEnxl" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
 
             </div>
             <h4 class="sub-heading">party messaging</h4>
