mclellans post about strengthening family skills

--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -77,6 +77,8 @@
                 Helped ensure SNAP recipients were reimbursed for stolen benefits. Posted on <a href="https://www.facebook.com/AssemblymanMcClellan/posts/pfbid05PNGenpCVPN1bwbNZ8Gk1R3JAxurQWFqUxrNKzuurLBc8jLpFwn6t136pm2BmpQnl" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
                 <br>
                 Supports preserving historic landmarks such as lighthouses. Posted on <a href="https://www.facebook.com/AssemblymanMcClellan/posts/pfbid0zFfDf6WQKbSyYV1taaFmjT3xDCXffZAtSMfbo5YP65roRsgKNHfkehhNJEj8yEnxl" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
+                <br>
+                Supports strengthening family skills. Posted on <a href="https://www.facebook.com/AssemblymanMcClellan/posts/pfbid02eaCGYpkwQuHiArREWmZ8yXjg32g6FRk1gL789deydtZfvBHbWxHbq55Zz6xLGcP1l" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
 
             </div>
             <h4 class="sub-heading">party messaging</h4>
