--- a/child_pages/cc-elections/Candidates/mcclellan.html
+++ b/child_pages/cc-elections/Candidates/mcclellan.html
@@ -79,6 +79,8 @@
                 Supports preserving historic landmarks such as lighthouses. Posted on <a href="https://www.facebook.com/AssemblymanMcClellan/posts/pfbid0zFfDf6WQKbSyYV1taaFmjT3xDCXffZAtSMfbo5YP65roRsgKNHfkehhNJEj8yEnxl" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
                 <br>
                 Supports strengthening family skills. Posted on <a href="https://www.facebook.com/AssemblymanMcClellan/posts/pfbid02eaCGYpkwQuHiArREWmZ8yXjg32g6FRk1gL789deydtZfvBHbWxHbq55Zz6xLGcP1l" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
+                <br>
+                Supports people with intellectual and developmental disabilities. Posted on <a href="https://www.facebook.com/AssemblymanMcClellan/posts/pfbid02HMiy48X7deQSCm8UonZHyMKjkuCsTu2F5BWw7W3uiX31jokWWFgQrrEQkkhs3F2Hl" target="_blank" rel="noopener noreferrer" class="website-link"> Facebook</a>
 
             </div>
             <h4 class="sub-heading">party messaging</h4>
