renaming test on vsb ballot

--- a/child_pages/vsb-elections/vsb_election_candidates.html
+++ b/child_pages/vsb-elections/vsb_election_candidates.html
@@ -70,11 +70,11 @@
             <div class="row state-senator">
                 <div class="office-title">
                     <div class="ot-english">
-                        <p>State Sentator</p>
+                        <p>School Board</p>
                         <p>Vote for One</p>
                     </div>
                     <div class="ot-espanol">
-                        <p>Senador Estatal</p>
+                        <p>Junta Escolar</p>
                         <p>Vote por Uno</p>
                     </div>
                 </div>
@@ -86,7 +86,7 @@
                             <p>Organization</p>
                         </div>
                         <div class="first-name">
-                            <a href="Candidates/laspata.html">Charles R.</a>
+                            <a href="Candidates/acevedo_erik.html">Erik</a>
                         </div>
                         <div class="number-a-and-circle"> 
                             <p>1A</p>
@@ -95,7 +95,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name  push-down-last-name">
-                            <a href="Candidates/laspata.html">LASPATA</a>
+                            <a href="Candidates/acevedo_erik.html">ACEVEDO</a>
                         </div>
                     </div>
 
