--- a/child_pages/vsb-elections/Candidates/acevedo_erik.html
+++ b/child_pages/vsb-elections/Candidates/acevedo_erik.html
@@ -21,7 +21,9 @@
                         <ul class="links">
                             <li class="link"><a href="../../../index.html">Home</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/cc_election_candidates.html">Cumberland County Elections</a></li>
-                            <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">Issues</a></li>
+                            <li class="link"><a href="../../../child_pages/cc-elections/cc_election_issues.html">County Issues</a></li>
+                            <li class="link"><a href="../../../child_pages/vsb-elections/vsb_election_candidates.html">Vineland School Board Elections</a></li>
+                            <li class="link"><a href="../../../child_pages/vsb-elections/vsb_election_issues.html">School Board Issues</a></li>
                             <li class="link"><a href="../../../child_pages/cc-elections/unanswered_questions.html">Unanswered Questions</a></li>
                             <li class="link"><a href="../../../child_pages/get-involved.html">Get Involved</a></li>
                             <li class="link"><a href="../../../child_pages/events.html">Events</a></li>
