--- a/child_pages/vsb-elections/Candidates/acevedo_erik.html
+++ b/child_pages/vsb-elections/Candidates/acevedo_erik.html
@@ -38,18 +38,18 @@
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
     <div class="title-info">
-        <h2>MICHAEL DONATO</h2>
+        <h2>ERIK ACEVEDO</h2>
         <div class="running-for">
             <div class="running-title">Running for: </div>
-            <div class="position">Cumberland County Sheriff</div>
+            <div class="position">Vineland School Board</div>
         </div>
         <div class="incum-or-challenger">
-            <div class="incumbent inactive">Incumbent</div>
-            <div class="challenger active">Challenger</div> 
+            <div class="incumbent active">Incumbent</div>
+            <div class="challenger inactive">Challenger</div> 
         </div>
     </div>
     <div class="candidate-pic-box">
-        <img class="cover" src="../../../assets/candidates/donato.webp" class="candidate-pic">
+        <img class="cover" src="../../../assets/candidates/erik_acevedo_cropped.jpg" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
         <h4 class="sub-heading">Website</h4>
