--- a/child_pages/vsb-elections/Candidates/carter.html
+++ b/child_pages/vsb-elections/Candidates/carter.html
@@ -49,7 +49,7 @@
         </div>
     </div>
     <div class="candidate-pic-box">
-        <img class="cover" src="../../../assets/candidates/carter.webp" class="candidate-pic">
+        <img class="cover" src="../../../assets/candidates/carter.jpg" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
         <h4 class="sub-heading">website</h4>
