makema facebook added

--- a/child_pages/vsb-elections/Candidates/makema.html
+++ b/child_pages/vsb-elections/Candidates/makema.html
@@ -52,7 +52,10 @@
         <img class="cover" src="../../../assets/candidates/makema.jpg" class="candidate-pic">
     </div>
     <div class="candidate-agenda">
-        <h4 class="sub-heading">campaign website</h4>
+        <h4 class="sub-heading">Website</h4>
+        <div class="website">
+            <a href="https://www.facebook.com/media/set/?set=a.107759325384112&type=3" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
+        </div>
             <div class="agenda-thesis">
                
             </div>
