medio link corrected

--- a/child_pages/vsb-elections/vsb_election_candidates.html
+++ b/child_pages/vsb-elections/vsb_election_candidates.html
@@ -280,7 +280,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a class="long-name" id="capizola" href="Candidates/capizola.html">MEDIO</a>
+                            <a class="long-name" id="capizola" href="Candidates/medio.html">MEDIO</a>
                         </div>
                     </div>
 
