link and quick name style cleanup for school board ballot page

--- a/child_pages/vsb-elections/vsb_election_candidates.html
+++ b/child_pages/vsb-elections/vsb_election_candidates.html
@@ -127,7 +127,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a class="long-name" href="Candidates/buono.html">BUONO</a>
+                            <a class="last-name" href="Candidates/buono.html">BUONO</a>
                         </div>
                     </div>
 
@@ -160,7 +160,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name push-down-last-name">
-                            <a href="Candidates/bonner.html">CARTER</a>
+                            <a href="Candidates/carter.html">CARTER</a>
                         </div>
                     </div>
 
@@ -280,7 +280,7 @@
                     </div>
                     <div class="a-row-2">
                         <div class="last-name">
-                            <a class="long-name" id="capizola" href="Candidates/medio.html">MEDIO</a>
+                            <a class="last-name" href="Candidates/medio.html">MEDIO</a>
                         </div>
                     </div>
 
