found carters website and beginning holmes info

--- a/child_pages/vsb-elections/Candidates/carter.html
+++ b/child_pages/vsb-elections/Candidates/carter.html
@@ -54,7 +54,7 @@
     <div class="candidate-agenda">
         <h4 class="sub-heading">website</h4>
         <div class="website">
-            
+            <a href="https://www.facebook.com/DAC4VBOE" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
         </div>
         <h4 class="sub-heading">individual agenda</h4>
             <div class="agenda-thesis">
