finished up holmes

--- a/child_pages/vsb-elections/Candidates/holmes.html
+++ b/child_pages/vsb-elections/Candidates/holmes.html
@@ -63,7 +63,7 @@
                 Promotes student attendance. Reposted on <a href="https://www.facebook.com/VinelandPublicSchools/posts/pfbid0t9vqd8Cb1hs2yDYAFynxSj2v9Cssy18rKPub4DvwqruqhMexrNvMokkwJBVHwGZBl" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a>
 
             </div>
-            
+            <h4 class="sub-heading">policy positions</h4>
             <div class="policy-positions">
                 Most important issues would be finances and mental health. It’s always a burden to raise taxes and every year we are tasked with doing so because the increasingly high costs. Mental health for all of our students, staff and administrators and how it relates to morale is a big deal. We want to make sure students are excited to learn, teachers are enthusiastic about teaching, administrators are a shining beam of every school, etc. 
             </div>
