added bio info to holmes page

--- a/child_pages/vsb-elections/Candidates/holmes.html
+++ b/child_pages/vsb-elections/Candidates/holmes.html
@@ -69,7 +69,7 @@
             </div>
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
-                7 years serving as a board member.
+                7 years serving as a board member, starting at 20 years old. Senior pastor at Union Baptist Temple in Bridgeton. Property manager for EPAC Management. Secretary of VHS Select Choir in 2015. Honored as Big Brother of the year for Big Brothers, Big Sisters in 2015. Former member of the Cumberland Cape Atlantic YMCA Board of Directors. Immediate Past-President of the Boys and Girls Club of Cumberland County. Honored by Front Runner NJ as one of the '30 under 35' Top African American Leaders of South Jersey. Served on the following board committees: Transportation, Policy & Personnel, Finance, Curriculum & Instruction. 
             </div>
     </div>
  </div>   
